@@ -4,6 +4,9 @@ static int Seeds::String2Seed(std_string *str);
 "558bec51f30f7e05????????a1????????53":
 __fastcall void Seeds::constructor();
 
+"558bec53568bf18b4d??57894e":
+__thiscall void Seeds::set_start_seed(unsigned int seed); 
+
 // sorry for the mess, this is a direct ghidra export :(
 struct Seeds depends (RNG,ANM2){
     bool _isCustomRun : 0x0;
