@@ -11,6 +11,11 @@ Additions:
 		new optional boolean (IgnoreBlock), ignores collectible block when set to true
 * Input:
 	- GetDeviceNameByIdx
+* MenuManager:
+	- SetInputMask(int mask) for use with the new ButtonActionBitwise enum, selectively allows the game's menu read certain inputs, useful for custom menus
+	- GetInputMask()
+* Isaac:
+	- StartNewGame(int playertype, int challenge, int difficulty, int seed), allows starting the game from within the main menu
 /newline/
 v1.0.8c - 
 Fixes:
